# luna

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prototools  AGENTS.md  LICENSE  PLAN.md  README.md  moon.yml  package.json  tsconfig.json  tsconfig.options.json
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: app.yml  go-web.yml  lib.yml  py-api.yml  ts-app.yml
apps/api/: README.md  moon.yml  pyproject.toml
apps/api/src/: config.py  database.py  exceptions.py  main.py  models.py
apps/api/src/ai/: __init__.py  config.py  exceptions.py  router.py  schemas.py  service.py
apps/api/tests/: test_api.py
apps/app/: README.md  moon.yml  package.json  tsconfig.json  vite.config.ts
apps/app/src/: app.css
apps/app/src/components/: counter.tsx
apps/app/src/routes/: index.tsx
apps/web/: README.md  go.mod  go.sum  main.go  moon.yml  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.tsx  entry-server.tsx  styles.css
apps/web/src/components/: counter.tsx  layout.templ  page.templ
apps/web/src/content/: legal.md
apps/web/src/content/posts/: getting-started.md  hello-world.md
apps/web/src/layouts/: base.templ  post.templ
apps/web/src/lib/: fs.go  page.go  post.go
apps/web/src/pages/: index.templ  legal.templ
apps/web/src/pages/posts/: index.templ  post.templ
apps/web/src/routes/: about.tsx  ai.tsx  design-system.tsx  index.tsx  ui.tsx
docs/: README.md
docs/design-system/: README.md  architecture.md  functions.md  patterns.md  roadmap.md  tokens.md
scripts/: helpers.sh  outdated.sh  update.sh  upgrade.sh
