[project]
name = "api"
version = "0.1.0"
description = "FastAPI + Pydantic AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-ai",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy[asyncio]",
  "aiosqlite",
]

[dependency-groups]
dev = ["ruff", "pytest", "pytest-asyncio", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
